software-center (1.1.10) UNRELEASED; urgency=low

  * softwarecenter/distro/aptutils.py:
    - removed, moved into python-apt
  * softwarecenter/view/appview.py:
    - ignore negative ratings (LP: #510409)
  * softwarecenter/db/database.py:
    - assert we have a popcon_max value
  * debian/control:
    - updated dependencies to latest python-apt
  * softwarecenter/view/availablepane.py:
    - fix name for Search Results (LP: #504379)
  * softwarecenter/view/installedpane.py:
    - add Search Results pathbar
  * debian/control:
    - drop python-sexy from the dependencies
  * softwarecenter/view/widgets/searchentry.py:
    - merge patch from Javier Jardón to use gtk.Entry instead
      of sexy.Entry (LP: #506811) - many thanks!
  * merged from  lp:~gary-lasker/software-center/active_app,
    many thanks!
  * softwarecenter/distro/Ubuntu.py:
    - add support for the new "Supported" tag in the Packages file
  * merged lp:~mmcg069/software-center/bug-fixes with lots of nice
    fixes in the pathbar and appview code (many thanks!)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jan 2010 18:20:40 +0100

software-center (1.1.9) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/app.py,
    softwarecenter/view/softwarepane.py:
    - add code to reselect the app in the list view on
      a tree model refresh
  * softwarecenter/view/widgets/pathbar2.py:
    - remove explicit callback when a button is appended
      to the pathbar as it is not needed
  * softwarecenter/app.py:
    - fix double call to the all/supported only menu
      item handlers

  [ Michael Vogt ]
  * softwarecenter/apt/aptcache.py:
    - properly fix removal warning (needs latest python-apt)
  * debian/control:
    - depend on latest python-apt
  * merged lp:~mmcg069/software-center/matts-pathbar-integration
    Many thanks to Matthew McGowan
    This gives us much nicer layout and a popcon column

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Jan 2010 14:56:15 +0100
