@@ -9,6 +9,7 @@
     <property name="default_height">500</property>
     <property name="icon_name">softwarecenter</property>
     <signal name="delete_event" handler="on_window_main_delete_event"/>
+    <signal name="key_press_event" handler="on_window_main_key_press_event"/>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
